--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-router": "^1.125.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.525.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
