--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/react-router": "^1.125.1",
+    "@tanstack/react-router": "^1.125.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.525.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-is": "^19.1.0",
     "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.6"
