--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-is": "^19.1.0",
+    "react-router-dom": "^7.7.0",
     "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.6"
